# regime-lens

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/regime_lens/: __init__.py
src/regime_lens/cli/: main.py
src/regime_lens/core/: analyzer.py  metrics.py  regimes.py  report.py
tests/: conftest.py
tests/cases/: sample_factor_ic.csv  sample_long_short_returns.csv  sample_market_prices.csv  sample_turnover.csv
tests/e2e/: test_cli_e2e.py
tests/unit/: test_analyzer.py  test_cli.py  test_fixtures.py  test_metrics.py  test_regimes.py  test_report.py
