[project]
name = "regime-lens"
version = "0.1.0"
description = "One line of code to see how a quant factor really performs across different market regimes"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VernonOY" }]
requires-python = ">=3.11"
keywords = ["quant", "factor-analysis", "regime", "backtest", "plotly"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.20",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
regime-lens = "regime_lens.cli.main:cli"

[project.urls]
Homepage = "https://github.com/VernonOY/regime-lens"
Issues = "https://github.com/VernonOY/regime-lens/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regime_lens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/e2e"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/regime_lens"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
fail_under = 80
